fix overlapping navbar buttons

--- a/src/components/Styles/Home.scss
+++ b/src/components/Styles/Home.scss
@@ -915,6 +915,7 @@ p {
 	background-color: #f9f9f9;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	flex-flow: column;
+	top: 100%;
 	.verifyEmail {
 		display: flex;
 		flex-flow: row;
